# Search-Engine

./: AvlTree.h  CMakeLists.txt  DocumentContents.cpp  DocumentContents.h  DocumentParserr.cpp  DocumentParserr.h  IndexHandlerr.cpp  IndexHandlerr.h  Interface.cpp  Interface.h  Project_Instructions.docx  QueryProcessor.cpp  QueryProcessor.h  documentation.md  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  test.cpp
